added revised intro

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,66 +1,35 @@
 \bibliographystyle{./IEEEtran}
 \bibliography{./IEEEabrv,./biblio}
 
-@article{b1,
-  author =  "Beatriz Caetano and Filipe Luna and Jorge Jesus and Cristo Rei",
+@online{argp,
+  author =  "{GNU Project}",
   
-  title =   "{L}olada {M}ix",
+  title = "Parsing Program Options with Argp",
   
-  journal = "FCT-UNL",
+  urldate = "2020-14-05",
   
-  year =    "2017"
+  url = "https://www.gnu.org/software/libc/manual/html\_node/Argp.html",
 }
 
-@article{b2,
-	author =  "Joana Lol and Chocapitos do Lidl",
+@online{omp,
+	author =  "{OpenMP}",
 	
-	title =   "{L}olada {M}ix",
+	title = "{OpenMP ARB}",
 	
-	journal = "FCT-UNL",
+	urldate = "2020-14-05",
 	
-	year =    "2017"
+	url = "https://www.openmp.org/",
 }
 
-@article{b3,
-	author =  "Beatriz Caetano and Manel Luna",
+@online{matplotlib,
+	author =  "{Matplotlib Development Team}",
 	
-	title =   "{L}olada {M}ix",
+	title = "Matplotlib",
 	
-	journal = "FCT-UNL",
+	urldate = "2020-14-05",
 	
-	year =    "2017"
+	url = "https://matplotlib.org/tutorials/introductory/pyplot.html",
 }
-
-@article{b4,
-	author =  "Luis Caetano and Filipe Luna",
-	
-	title =   "{L}olada {M}ix",
-	
-	journal = "FCT-UNL",
-	
-	year =    "2012"
-}
-
-@article{b5,
-	author =  "Beatriz Caetano and Filipe Luna",
-	
-	title =   "{L}olada {M}ix",
-	
-	journal = "FCT-UNL",
-	
-	year =    "2011"
-}
-
-@article{b6,
-	author =  "Beatriz Caetano and Filipe Luna",
-	
-	title =   "{L}olada {M}ix",
-	
-	journal = "FCT-UNL",
-	
-	year =    "2015"
-}
-
 
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
