--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -11,14 +11,24 @@
   url = "https://www.gnu.org/software/libc/manual/html\_node/Argp.html",
 }
 
-@online{omp,
-	author =  "{OpenMP}",
+@online{omp, 
+	author =  "{OpenMP ARB}",
 	
-	title = "{OpenMP ARB}",
+	title = "{OpenMP}",
 	
 	urldate = "2020-14-05",
 	
 	url = "https://www.openmp.org/",
+}
+
+@online{ompreduct, 
+	author =  "{OpenMP ARB}",
+	
+	title = "{OpenMP: Reduction Clauses and Directives}",
+	
+	urldate = "2020-14-05",
+	
+	url = "https://www.openmp.org/spec-html/5.0/openmpsu107.html/",
 }
 
 @online{matplotlib,
@@ -30,6 +40,19 @@
 	
 	url = "https://matplotlib.org/tutorials/introductory/pyplot.html",
 }
+
+@book{mccool,
+	author =  "Michael McCool and Arch D. Robison and James Reinders",
+	
+	title = "Structured Parallel Programming: Patterns for Efficient Computation",
+	
+	publisher = "Elsevier",
+	
+	year = "2012",
+	
+	isbn = "978-0-12-415993-8"
+}
+
 
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
