--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -53,6 +53,17 @@
 	isbn = "978-0-12-415993-8"
 }
 
+@online{dobbpack,
+	author =  "Michael McCool",
+	
+	title = "Parallel Pattern 9: Pack",
+	
+	urldate = "2020-14-05",
+	
+	year = "2009",
+	
+	url = "https://www.drdobbs.com/parallel/parallel-pattern-9-pack/222000295",
+}
 
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
